--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ install:
   - python -m pip install .
 
 script:
+  - python -m unittest pspy.tests.test_so_dict
   - python -c 'print("pspy rocks")'
