--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ install:
   - python -m pip install .
 
 script:
-  - python -m unittest pspy.tests.test_so_dict
-  - python -c 'print("pspy rocks")'
+  - cd pspy/tests
+  - python -c 'import pspy'
+  - python -m unittest test_so_dict
