--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Install dependencies via pip
       run: |
         python -m pip install --upgrade pip
+        pip install numpy
         pip install .
 
     - name: Unit tests
