--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,6 +26,16 @@ jobs:
         sudo ln -s /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
         gfortran --version
 
+    - name: Brew packages
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew install fftw
+
+    - name: Apt packages
+      if: matrix.os == 'ubuntu'
+      run: |
+        apt-get install libfftw3-dev
+
     - name: Install dependencies via pip
       run: |
         python -m pip install --upgrade pip
