--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Apt packages
       if: matrix.os == 'ubuntu-latest'
       run: |
-        apt-get install libfftw3-dev
+        sudo apt-get install libfftw3-dev
 
     - name: Install dependencies via pip
       run: |
