--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -47,9 +47,10 @@ jobs:
         cd pspy/tests
         python -m unittest test_so_dict
         python -m unittest test_so_map
+        python -m unittest test_so_spectra
 
-    # - name: Test notebooks (Only on Linux for saving time)
-    #   if: matrix.os == 'ubuntu-latest'
-    #   run: |
-    #     pip install jupyter
-    #     jupyter nbconvert --to notebook --execute notebooks/mflike_tutorial.ipynb
+    - name: Test notebooks (Only on Linux for saving time)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        pip install jupyter
+        jupyter nbconvert --to notebook --execute notebooks/tutorial_io.ipynb
