--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -13,9 +13,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Brew packages
+        if: matrix.os == 'macos-latest'
+        run: |
+          set -x
+          sudo ln -s /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
+          gfortran --version
+          brew install fftw
+
+      - name: Apt packages
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get install libfftw3-dev
+
       - name: Build wheels
         uses: joerick/cibuildwheel@v1.9.0
         env:
+          CIBW_BEFORE_BUILD: "python -m pip install numpy"
           CIBW_BUILD_VERBOSITY: 3
           CIBW_BUILD: "cp3?-*x86_64"
 
@@ -34,8 +48,23 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Brew packages
+        if: matrix.os == 'macos-latest'
+        run: |
+          set -x
+          sudo ln -s /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
+          gfortran --version
+          brew install fftw
+
+      - name: Apt packages
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get install libfftw3-dev
+
       - name: Build sdist
-        run: python setup.py sdist
+        run: |
+          python -m pip install numpy
+          python setup.py sdist
 
       - uses: actions/upload-artifact@v2
         with:
