add an installation test

--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -69,6 +69,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           path: dist/*.tar.gz
+          retention-days: 1
 
   upload_pypi:
     needs: [build_wheels, build_sdist]
