--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -39,15 +39,16 @@ jobs:
     - name: Install dependencies via pip
       run: |
         python -m pip install --upgrade pip wheel
-        pip install numpy
-        pip install .
+        python -m pip install numpy pytest pytest-cov
+        python -m pip install -e .
 
     - name: Unit tests
       run: |
-        cd pspy/tests
-        python -m unittest test_so_dict
-        python -m unittest test_so_map
-        python -m unittest test_so_spectra
+        pytest -vv pspy --cov=pspy --cov-report=xml:coverage.xml
+
+    - name: Report Coverage (codecov)
+      if: matrix.os == 'ubuntu-latest'
+      uses: codecov/codecov-action@v2
 
     - name: Test notebooks (Only on Linux for saving time)
       if: matrix.os == 'ubuntu-latest'
