--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,17 +29,18 @@ jobs:
     - name: Brew packages
       if: matrix.os == 'macos-latest'
       run: |
-        brew install fftw
+        brew install fftw cfitsio
 
     - name: Apt packages
       if: matrix.os == 'ubuntu-latest'
       run: |
-        sudo apt-get install libfftw3-dev
+        sudo apt-get install libfftw3-dev libcfitsio-dev
 
     - name: Install dependencies via pip
       run: |
         python -m pip install --upgrade pip wheel
         python -m pip install numpy pytest pytest-cov
+        python -m pip install camb pymaster
         python -m pip install -e .
 
     - name: Unit tests
