--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Brew packages
       if: matrix.os == 'macos-latest'
       run: |
-        brew install fftw cfitsio
+        brew install fftw cfitsio automake
 
     - name: Apt packages
       if: matrix.os == 'ubuntu-latest'
