--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -30,22 +30,30 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         brew install automake cfitsio gsl fftw
-        export CXX=g++-10
-        export CC=gcc-10
-        export LDFLAGS=-L/usr/local/lib
-        export CPPFLAGS=-I/usr/local/include
 
     - name: Apt packages
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install libcfitsio-dev libfftw3-dev
 
-    - name: Install dependencies via pip
+    - name: Install via pip
       run: |
         python -m pip install --upgrade pip
         python -m pip install numpy pytest pytest-cov
-        python -m pip install camb pymaster
         python -m pip install -e .
+
+    - name: Install namaster on Mac
+      if: matrix.os == 'macos-latest'
+      run: |
+        export CXX=g++-10
+        export CC=gcc-10
+        export LDFLAGS=-L/usr/local/lib
+        export CPPFLAGS=-I/usr/local/include
+        python -m pip install pymaster
+
+    - name: Install extra depndencies
+      run: |
+        python -m pip install camb pymaster
 
     - name: Unit tests
       run: |
