add python matrix version back

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ["3.8"] #, "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v2
@@ -51,7 +51,7 @@ jobs:
         export CPPFLAGS=-I/usr/local/include
         python -m pip install pymaster
 
-    - name: Install extra depndencies
+    - name: Install extra dependencies (camb, namaster)
       run: |
         python -m pip install camb pymaster
 
