--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.3.1
         env:
-          CIBW_BEFORE_BUILD: "python -m pip install numpy"
+          CIBW_BEFORE_BUILD: "python -m pip install numpy==1.22.4"
           CIBW_BUILD_VERBOSITY: 3
           CIBW_BUILD: "cp3*-*x86_64"
           CIBW_SKIP: "cp3{5,6}-*"
