--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -9,6 +9,16 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
+        cp: [cp38, cp39, cp310, cp311]
+        include:
+          - cp: cp38
+            numpyver: "1.22.4"
+          - cp: cp39
+            numpyver: "1.22.4"
+          - cp: cp310
+            numpyver: "1.22.4"
+          - cp: cp311
+            numpyver: "1.22.4"
 
     steps:
       - uses: actions/checkout@v3
@@ -29,10 +39,10 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.12.0
         env:
-          CIBW_BEFORE_BUILD: "python -m pip install numpy==1.22.4"
+          CIBW_BEFORE_BUILD: "python -m pip install numpy==${{ matrix.numpyver }}"
           CIBW_BUILD_VERBOSITY: 3
-          CIBW_BUILD: "cp3*-*x86_64"
-          CIBW_SKIP: "cp3{5,6,7}-*"
+          CIBW_BUILD: "${{ matrix.cp }}-*x86_64"
+          CIBW_SKIP: "*-musllinux_*"
 
       - uses: actions/upload-artifact@v2
         with:
