--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -12,8 +12,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        cp: [cp38, cp39, cp310, cp311]
+        cp: [cp37, cp38, cp39, cp310, cp311]
         include:
+           - cp: cp37
+            numpyver: "1.20"
           - cp: cp38
             numpyver: "1.22"
           - cp: cp39
@@ -47,7 +49,7 @@ jobs:
           CIBW_BUILD: "${{ matrix.cp }}-*x86_64"
           CIBW_SKIP: "*-musllinux_*"
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
           retention-days: 1
