--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -3,7 +3,9 @@ name: Build wheels and upload to PyPI
 on:
   pull_request:
   push:
-    branches: [master]
+    branches:
+      - master
+      - 'releases/**'
 
 jobs:
   build_wheels:
