--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,6 +34,7 @@ jobs:
         python -m pip install --upgrade pip wheel
         python -m pip install numpy pytest pytest-cov
         python -m pip install -e .
+        python -m pip install pixell==0.17.3
 
     - name: Install extra dependencies (camb)
       run: |
