--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,7 +34,8 @@ jobs:
         python -m pip install --upgrade pip wheel
         python -m pip install numpy pytest pytest-cov
         python -m pip install -e .
-        python -m pip install pixell==0.17.3
+        # Newest version of pillow does not play well with pixell
+        python -m pip install pillow==9.5.0
 
     - name: Install extra dependencies (camb)
       run: |
@@ -58,7 +59,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         python -m pip install jupyter
-        # jupyter nbconvert --to notebook --execute notebooks/tutorial_io.ipynb
+        jupyter nbconvert --to notebook --execute notebooks/tutorial_io.ipynb
 
     - name: Comparing pspy to NaMaster
       if: matrix.os == 'ubuntu-latest'
