--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -37,6 +37,7 @@ jobs:
         # Newest version of pillow does not play well with pixell
         python -m pip install pillow==9.5.0
         # Let's try to re-install (properly) ducc
+        python -m pip uninstall -y ducc0
         python -m pip install --no-binary ducc0 ducc0
 
     - name: Install extra dependencies (camb)
