--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install via pip
       run: |
         python -m pip install --upgrade pip wheel
-        python -m pip install numpy pytest pytest-cov
+        python -m pip install numpy==1.25.2 pytest pytest-cov
         python -m pip install -e .
         # Newest version of pillow does not play well with pixell
         python -m pip install pillow==9.5.0
@@ -40,7 +40,7 @@ jobs:
     - name: Build ducc for macos
       if: matrix.os == 'macos-latest'
       run: |
-        export DUCC0_OPTIMIZATION=none
+        export SYSTEM_VERSION_COMPAT=1
         python -m pip uninstall -y ducc0
         python -m pip install --no-binary ducc0 ducc0
 
