--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install via pip
       run: |
         python -m pip install --upgrade pip wheel
-        python -m pip install "numpy<1.26" pytest pytest-cov
+        python -m pip install numpy>=1.26.1 pytest pytest-cov
         python -m pip install -e .
         
     - name: Install extra dependencies (camb)
