New documentation settings
- clean old stuff in the docs generation mechanism
- use modern sphinx theme i.e. sphinx-book-theme
- move notebooks into docs

--- a/docs/source/notebooks/Makefile
+++ b/docs/source/notebooks/Makefile
@@ -2,7 +2,7 @@ IPYNB_FILES := $(wildcard *.ipynb)
 HTML_FILES  := $(filter-out index.html, $(IPYNB_FILES:.ipynb=.html))
 
 %.html: %.ipynb
-	jupyter nbconvert --ExecutePreprocessor.timeout=None --output-dir="../docs/source/notebooks" --to html --execute $<
+	jupyter nbconvert --ExecutePreprocessor.timeout=None --to html --execute $<
 
 all: html
 
