--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -60,7 +60,8 @@ jobs:
     - name: Test notebooks (Only on Linux for saving time)
       if: matrix.os == 'ubuntu-latest'
       run: |
-        python -m pip install jupyter
+        python -m pip install jupyter ipykernel
+        python -m ipykernel install --user --name=pspy
         jupyter nbconvert --to notebook --execute docs/source/notebooks/tutorial_io.ipynb
 
     - name: Comparing pspy to NaMaster
