--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -18,11 +18,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        cp: [cp37, cp38, cp39, cp310, cp311]
+        # macos-13 is an intel runner, macos-14 is apple silicon
+        os: [ubuntu-latest, macos-13, macos-14]
+        cp: [cp38, cp39, cp310, cp311]
         include:
-          - cp: cp37
-            numpyver: "1.20"
           - cp: cp38
             numpyver: "1.22"
           - cp: cp39
@@ -35,25 +34,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Brew packages
-        if: matrix.os == 'macos-latest'
+      - name: Set gfortran link for macos-13
+        if: matrix.os == 'macos-13'
         run: |
           set -x
           sudo ln -s /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
-          gfortran --version
-          brew install fftw
-
-      - name: Apt packages
-        if: matrix.os == 'ubuntu-latest'
+          
+      - name: Set gfortran link for macos-14
+        if: matrix.os == 'macos-14'
         run: |
-          sudo apt-get install libfftw3-dev
+          set -x
+          sudo ln -s /opt/homebrew/bin/gfortran-11 /usr/local/bin/gfortran
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.17.0
         env:
           CIBW_BEFORE_BUILD: "python -m pip install numpy==${{ matrix.numpyver }}"
           CIBW_BUILD_VERBOSITY: 3
-          CIBW_BUILD: "${{ matrix.cp }}-*x86_64"
+          # CIBW_BUILD: "${{ matrix.cp }}-*x86_64"
           CIBW_SKIP: "*-musllinux_*"
 
       - uses: actions/upload-artifact@v4
@@ -74,17 +72,11 @@ jobs:
           python-version: '3.8'
 
       - name: Brew packages
-        if: matrix.os == 'macos-latest'
+        if: matrix.os == 'macos-13'
         run: |
           set -x
-          sudo ln -s /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
+          sudo ln -s /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
           gfortran --version
-          brew install fftw
-
-      - name: Apt packages
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get install libfftw3-dev
 
       - name: Build sdist
         run: |
