--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -51,7 +51,7 @@ jobs:
         env:
           CIBW_BEFORE_BUILD: "python -m pip install numpy==${{ matrix.numpyver }}"
           CIBW_BUILD_VERBOSITY: 3
-          # CIBW_BUILD: "${{ matrix.cp }}-*x86_64"
+          CIBW_BUILD: "${{ matrix.cp }}-*"
           CIBW_SKIP: "*-musllinux_*"
 
       - uses: actions/upload-artifact@v4
