--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.18.0
         env:
-          CIBW_BEFORE_BUILD: "python -m pip install numpy==${{ matrix.numpyver }}"
+          CIBW_BEFORE_BUILD: "python -m pip install numpy==${{ matrix.numpyver }} wheel"
           CIBW_BUILD_VERBOSITY: 3
           CIBW_BUILD: "${{ matrix.cp }}-*"
           CIBW_SKIP: "*-musllinux_* *i686*"
