--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -30,18 +30,13 @@ jobs:
       if: matrix.os == 'macos-latest'
       run: |
         set -x
-        sudo ln -s /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
+        sudo ln -s /usr/local/bin/gfortran-12 /usr/local/bin/gfortran
         gfortran --version
 
     - name: Install via pip
       run: |
-        python -m pip install --upgrade pip wheel
-        python -m pip install numpy pytest pytest-cov
-        python -m pip install -e .
-
-    - name: Install extra dependencies (camb)
-      run: |
-        python -m pip install camb
+        python -m pip install --upgrade pip setuptools wheel meson ninja meson-python cython numpy
+        python -m pip install --no-build-isolation --editable '.[test]'
 
     - name: Download test data
       run: |
@@ -51,7 +46,7 @@ jobs:
 
     - name: Unit tests
       run: |
-        pytest -vv pspy --cov=pspy --cov-report=xml:coverage.xml --ignore=pspy/tests/test_pspy_namaster.py
+        pytest -vv pspy --cov=pspy --cov-report=xml --cov-report annotate --ignore=pspy/tests/test_pspy_namaster.py
 
     - name: Report Coverage (codecov)
       if: matrix.os == 'ubuntu-latest'
@@ -60,7 +55,7 @@ jobs:
     - name: Test notebooks (Only on Linux for saving time)
       if: matrix.os == 'ubuntu-latest'
       run: |
-        python -m pip install jupyter ipykernel
+        python -m pip install '.[notebook]'
         python -m ipykernel install --user --name=pspy
         jupyter nbconvert --to notebook --execute docs/source/notebooks/tutorial_io.ipynb
 
@@ -68,5 +63,4 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install -y libcfitsio-dev libfftw3-dev
-        python -m pip install pymaster
         python -m unittest pspy/tests/test_pspy_namaster.py
