--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -14,51 +14,25 @@ concurrency:
 
 jobs:
   build_wheels:
-    name: Build wheels on ${{ matrix.os }} for ${{ matrix.cp }}
+    name: Build wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        cp: [cp37, cp38, cp39, cp310, cp311]
-        include:
-          - cp: cp37
-            numpyver: "1.20"
-          - cp: cp38
-            numpyver: "1.22"
-          - cp: cp39
-            numpyver: "1.22"
-          - cp: cp310
-            numpyver: "1.22"
-          - cp: cp311
-            numpyver: "1.22"
+        os: [ubuntu-latest, macos-13, macos-14]
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Brew packages
-        if: matrix.os == 'macos-latest'
-        run: |
-          set -x
-          sudo ln -s /usr/local/bin/gfortran-11 /usr/local/bin/gfortran
-          gfortran --version
-          brew install fftw
-
-      - name: Apt packages
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get install libfftw3-dev
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.16.5
         env:
-          CIBW_BEFORE_BUILD: "python -m pip install numpy==${{ matrix.numpyver }}"
-          CIBW_BUILD_VERBOSITY: 3
-          CIBW_BUILD: "${{ matrix.cp }}-*x86_64"
-          CIBW_SKIP: "*-musllinux_*"
+          FC: gfortran-12
+          CC: gcc-12
+          MACOSX_DEPLOYMENT_TARGET: ${{ matrix.os == 'macos-13' && '13.0' || '14.0' }}
 
       - uses: actions/upload-artifact@v4
         with:
-          name: cibw-wheels-${{ matrix.os }}-${{ matrix.cp }}
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
           retention-days: 1
 
@@ -71,25 +45,14 @@ jobs:
       - uses: actions/setup-python@v5
         name: Install Python
         with:
-          python-version: '3.8'
-
-      - name: Brew packages
-        if: matrix.os == 'macos-latest'
-        run: |
-          set -x
-          sudo ln -s /usr/local/bin/gfortran-10 /usr/local/bin/gfortran
-          gfortran --version
-          brew install fftw
-
-      - name: Apt packages
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          sudo apt-get install libfftw3-dev
+          python-version: '3.10'
 
       - name: Build sdist
         run: |
+          python -m pip install --upgrade pip setuptools wheel
           python -m pip install numpy
-          python setup.py sdist
+          python -m pip install build
+          python -m build --sdist
 
       - uses: actions/upload-artifact@v4
         with:
