--- a/pspy/tests/meson.build
+++ b/pspy/tests/meson.build
@@ -1,9 +1,9 @@
 python_test_sources = [
-  'tests/test_pspy_namaster.py',
-  'tests/test_so_cov.py',
-  'tests/test_so_dict.py',
-  'tests/test_so_map.py',
-  'tests/test_so_spectra.py',
+  'test_pspy_namaster.py',
+  'test_so_cov.py',
+  'test_so_dict.py',
+  'test_so_map.py',
+  'test_so_spectra.py',
 ]
 py.install_sources(
   python_test_sources,
@@ -11,10 +11,10 @@ py.install_sources(
 )
 
 python_data_sources = [
-  'tests/data/generate_test_data.py',
-  'tests/data/bode_almost_wmap5_lmax_1e4_lensedCls_startAt2.dat',
-  'tests/data/parameters_test_data.yml',
-  'tests/data/test_data.pkl',
+  'data/generate_test_data.py',
+  'data/bode_almost_wmap5_lmax_1e4_lensedCls_startAt2.dat',
+  'data/parameters_test_data.yml',
+  'data/test_data.pkl',
 ]
 py.install_sources(
   python_data_sources,
