--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,10 +17,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest] #, macos-latest]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
-        include:
-          - os: ubuntu-latest
-            gfortran: 14
+        # python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.12"]
+
     steps:
     - uses: actions/checkout@v4
 
