--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,8 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest] #, macos-latest]
-        # python-version: ["3.9", "3.10", "3.11", "3.12"]
-        python-version: ["3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
@@ -53,15 +52,16 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v4
 
-    - name: Test notebooks (Only on Linux for saving time)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        python -m pip install '.[notebook]'
-        python -m ipykernel install --user --name=pspy
-        jupyter nbconvert --to notebook --execute docs/source/notebooks/tutorial_io.ipynb
-
-    # - name: Comparing pspy to NaMaster
+    # - name: Test notebooks (Only on Linux for saving time)
     #   if: matrix.os == 'ubuntu-latest'
     #   run: |
-    #     sudo apt-get install -y libcfitsio-dev libfftw3-dev
-    #     python -m unittest pspy/tests/test_pspy_namaster.py
+    #     python -m pip install '.[notebook]'
+    #     python -m ipykernel install --user --name=pspy
+    #     jupyter nbconvert --to notebook --execute docs/source/notebooks/tutorial_io.ipynb
+
+    - name: Comparing pspy to NaMaster
+      # NaMaster can not be compiled under python 3.12
+      if: matrix.os == 'ubuntu-latest' && matrix.python == '3.11'
+      run: |
+        sudo apt-get install -y libcfitsio-dev libfftw3-dev
+        python -m unittest pspy/tests/test_pspy_namaster.py
