--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,8 +16,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-12]
+        os: [ubuntu-latest, macos-latest]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
+        include:
+
 
     steps:
     - uses: actions/checkout@v4
@@ -28,9 +30,11 @@ jobs:
         python-version: ${{ matrix.python-version }}
 
     - name: Set gfortran link on macos-latest
-      if: matrix.os == 'macos-12'
+      if: matrix.os == 'macos-latest'
       run: |
-        export FC=gfortran-12
+        export CC=gcc-14
+        export CXX=gcc-14
+        export FC=gfortran-14
         ln -s $FC $(dirname $(which $FC))/gfortran
         gfortran --version
 
