let's use pure bash function to export env variable

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,11 +18,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest]
         python-version: ["3.9", "3.10", "3.11", "3.12"]
-        include:
-          - os: macos-lates
-            CC: gcc-14
-            CXX: gcc-14
-            FC: gfortran-14
 
     steps:
     - uses: actions/checkout@v4
@@ -35,6 +30,9 @@ jobs:
     - name: Set gfortran link on macos-latest
       if: matrix.os == 'macos-latest'
       run: |
+        export CC=gcc-14
+        export CXX=gcc-14
+        export FC=gfortran-14
         ln -s $FC $(dirname $(which $FC))/gfortran
         gfortran --version
 
