--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -66,7 +66,7 @@ jobs:
 
     - name: Comparing pspy to NaMaster
       # NaMaster can not be compiled under python 3.12
-      if: ${{ (matrix.os == 'ubuntu-latest') && (matrix.python-version == '3.11') }}
+      if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install -y libcfitsio-dev libfftw3-dev
         python -m pip install namaster
