--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -65,9 +65,8 @@ jobs:
     #     jupyter nbconvert --to notebook --execute docs/source/notebooks/tutorial_io.ipynb
 
     - name: Comparing pspy to NaMaster
-      # NaMaster can not be compiled under python 3.12
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get install -y libcfitsio-dev libfftw3-dev
-        python -m pip install namaster
+        python -m pip install pymaster
         python -m unittest pspy/tests/test_pspy_namaster.py
