add codecov token

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -56,6 +56,8 @@ jobs:
     - name: Report Coverage (codecov)
       if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v4
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
     # - name: Test notebooks (Only on Linux for saving time)
     #   if: matrix.os == 'ubuntu-latest'
