--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -69,6 +69,6 @@ jobs:
     - name: Comparing pspy to NaMaster
       if: matrix.os == 'ubuntu-latest'
       run: |
-        sudo apt-get install -y libcfitsio-dev libfftw3-dev
+        sudo apt-get install -y libcfitsio-dev libfftw3-dev libgsl-dev
         python -m pip install pymaster
         python -m unittest pspy/tests/test_pspy_namaster.py
