add 3.13 version (namaster may not like it)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ classifiers = [
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+]
 ]
 requires-python = ">=3.9.0"
 dependencies = ["pixell>=0.26.1"]
