--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, macos-15-intel]
+        os: [ubuntu-latest, macos-14, macos-latest, macos-15-intel]
 
     steps:
       - uses: actions/checkout@v6
@@ -28,7 +28,7 @@ jobs:
         env:
           FC: gfortran-14
           CC: gcc-14
-          MACOSX_DEPLOYMENT_TARGET: ${{ matrix.os == 'macos-13' && '13.0' || '15.0' }}
+          MACOSX_DEPLOYMENT_TARGET: ${{ matrix.os == 'macos-14' && '14.0' || '15.0' }}
 
       - uses: actions/upload-artifact@v5
         with:
